[package]
name = "src20_sdk"
version = "0.0.3"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"
description = "Sway token standard SRC-20 rust sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fuels = { version = "0.44", features = ["fuel-core-lib"] }
serde = "1.0.171"

[dev-dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"
