[package]
name = "src20_sdk"
version = "0.0.3"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"
description = "Sway token standard SRC-20 rust sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fuels = { version = "0.61.0", features = ["fuel-core-lib"] }
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
sha2 = "0.10.8"
tai64 = "4.0.0"
tokio = { version = "1.12", features = ["full"] }

[[test]]
harness = true
name = "tests"
path = "tests/harness.rs"


[[bin]]
name = "deploy"
path = "scripts/deploy.rs"

[[bin]]
name = "mint"
path = "scripts/mint.rs"
